[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-trading-env"
version = "0.3.2"
license = {file = "LICENSE.txt"}
authors = [
  { name="Clement Perroud", email="clement.perroud.pro@gmail.com" },
]
description = "A simple, easy, customizable Open IA Gym environments for trading."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5.3",
    "numpy>=1.21.1",
    "gymnasium>=0.28.1",
    "flask>=2.2.3",
    "pyecharts>=2.0.2",
    "ccxt==3.0.59",
    "nest_asyncio"
]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9,<1.0.0",
  "pytest>=8.4.1,<9.0.0",
]
